<?xml version="1.0" encoding="utf-8"?><!--suppress AndroidUnknownAttribute -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/svContent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/ivClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/content_description_close"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/ic_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/auth_logo_height"
            android:layout_marginTop="@dimen/auth_logo_margin_top"
            android:contentDescription="@string/content_description_logo"
            android:src="@drawable/ic_app_logo_gray"
            app:layout_constraintBottom_toTopOf="@+id/tvRegisterTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvRegisterTitle"
            fontPath="fonts/Roboto-Medium.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:gravity="center_horizontal"
            android:lineSpacingExtra="2dp"
            android:textColor="@color/auth_title_text"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/llInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogo"
            tools:ignore="MissingPrefix"
            tools:text="@string/auth_register" />

        <LinearLayout
            android:id="@+id/llInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/ibRegister"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle">

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/tilFirstName"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etFirstName"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/auth_input_first_name_hint"
                    android:inputType="textCapWords" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/tilLastName"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLastName"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/auth_input_last_name_hint"
                    android:inputType="textCapWords" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/tilEmail"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="custom"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/auth_input_email_hint"
                    android:inputType="textEmailAddress" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/tilPassword"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/auth_input_password_hint"
                    android:inputType="textPassword" />
            </com.example.ui.views.CustomTextInputLayout>

            <com.example.ui.views.CustomTextInputLayout
                android:id="@+id/tilPasswordConfirm"
                style="@style/Profile.Edit.InputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginTop="3dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                app:endIconMode="password_toggle"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPasswordConfirm"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/auth_input_password_confirm_hint"
                    android:inputType="textPassword" />
            </com.example.ui.views.CustomTextInputLayout>

            <LinearLayout
                android:id="@+id/llAgree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <FrameLayout
                    android:id="@+id/flAgree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:minWidth="48dp"
                    android:minHeight="48dp">

                    <androidx.appcompat.widget.AppCompatCheckBox
                        android:id="@+id/cbAgree"
                        fontPath="fonts/Roboto-Light.ttf"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@null"
                        android:clickable="false"
                        android:minWidth="0dp"
                        android:minHeight="0dp"
                        android:theme="@style/CheckBox" />
                </FrameLayout>

                <TextView
                    android:id="@+id/tvAgree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/auth_title_text"
                    tools:text="@string/auth_agree_user_agreement" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvAgreeError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_horizontal_default"
                android:layout_marginEnd="@dimen/margin_horizontal_default"
                android:gravity="center"
                android:text="@string/auth_error_agreement"
                android:textColor="@color/attention_action"
                android:visibility="invisible" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ibRegister"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_default"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_horizontal_default"
            android:background="@drawable/background_action_button_selector"
            android:minHeight="@dimen/auth_button_min_height"
            android:text="@string/auth_action_register"
            android:textAllCaps="false"
            android:textColor="@color/text_color_action_button"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llInput"
            app:layout_goneMarginBottom="24dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_horizontal_default"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="@dimen/margin_horizontal_default"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibRegister"
            app:layout_constraintVertical_bias="1.0">

            <TextView
                android:id="@+id/tvSnRegistration"
                fontPath="fonts/Roboto-Light.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/auth_register_with_sn"
                android:textColor="@color/auth_title_text"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingPrefix" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibVk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_circle"
                android:contentDescription="@string/content_description_vk"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_vk"
                android:theme="@style/ViewBackgroundVk"
                app:layout_constraintEnd_toStartOf="@+id/ibFacebook"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSnRegistration" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_circle"
                android:contentDescription="@string/content_description_ok"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_ok"
                android:theme="@style/ViewBackgroundOk"
                app:layout_constraintBottom_toBottomOf="@+id/ibVk"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ibFacebook"
                app:layout_constraintTop_toTopOf="@+id/ibVk" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/ibFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/background_circle"
                android:contentDescription="@string/content_description_facebook"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:src="@drawable/ic_facebook"
                android:theme="@style/ViewBackgroundFacebook"
                app:layout_constraintBottom_toBottomOf="@+id/ibVk"
                app:layout_constraintEnd_toStartOf="@+id/ibOk"
                app:layout_constraintStart_toEndOf="@+id/ibVk"
                app:layout_constraintTop_toTopOf="@+id/ibVk" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>