<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:letterSpacing="-0.02"
            android:id="@+id/tvFormTitle"
            fontPath="fonts/sf_pro_display.OTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:text="Ваше имя *" />

        <TextView
            android:importantForAccessibility="no"
            android:letterSpacing="-0.02"
            android:id="@+id/tvFormValue"
            fontPath="fonts/sf_pro_display.OTF"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:includeFontPadding="false"
            android:textColor="#9A99A2"
            android:textSize="17sp"
            tools:text="Иванович" />
    </LinearLayout>


</layout>