...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorIconDrawable="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMiddleName"
                    style="@style/Profile.Edit.Input.SingleLine"
                    android:hint="@string/user_profile_middle_name"
                    android:inputType="textCapWords|textPersonName" />
            </com.example.ui.views.CustomTextInputLayout>

            <androidx.appcompat.widget.AppCompatCheckBox
...
